--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 </script>
 
     <meta property="og:site_name" content="Roblox">
-    <meta property="og:title" content="pooopscoop's Profile">
+    <meta property="og:title" content="XxSans_2008xX's Profile">
     <meta property="og:type" content="profile">
         <meta property="og:url" content="https://www.roblox.com/users/156/profile">
-    <meta property="og:description" content="pooopscoop is one of the millions creating and exploring the endless possibilities of Roblox. Join pooopscoop on Roblox and explore together!">
-            <meta property="og:image" content="https://tr.rbxcdn.com/3a5acfd1a611187c332989a32e13274f/352/352/Avatar/Png">
+    <meta property="og:description" content="XxSans_2008xX is one of the millions creating and exploring the endless possibilities of Roblox. Join XxSans_2008xX on Roblox and explore together!">
+            <meta property="og:image" content="https://tr.rbxcdn.com/fe10dfae3a244867c79d579ae5142ccd/352/352/Avatar/Png">
     <meta property="fb:app_id" content="190191627665278">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@Roblox">
-    <meta name="twitter:title" content="pooopscoop's Profile">
-    <meta name="twitter:description" content="pooopscoop is one of the millions creating and exploring the endless possibilities of Roblox. Join pooopscoop on Roblox and explore together!">
+    <meta name="twitter:title" content="XxSans_2008xX's Profile">
+    <meta name="twitter:description" content="XxSans_2008xX is one of the millions creating and exploring the endless possibilities of Roblox. Join XxSans_2008xX on Roblox and explore together!">
     <meta name="twitter:creator">
-            <meta name="twitter:image1" content="https://tr.rbxcdn.com/3a5acfd1a611187c332989a32e13274f/352/352/Avatar/Png">
+            <meta name="twitter:image1" content="https://tr.rbxcdn.com/fe10dfae3a244867c79d579ae5142ccd/352/352/Avatar/Png">
     <meta name="twitter:app:country" content="US">
     <meta name="twitter:app:name:iphone" content="Roblox Mobile">
     <meta name="twitter:app:id:iphone" content="431946152">
